redering proper triangles

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 # Add source to this project's executable.
 add_executable (engine 
   main.cpp
@@ -30,6 +29,27 @@ target_precompile_headers(engine PUBLIC <optional> <vector> <memory> <string> <v
 if(WIN32)
   add_custom_command(TARGET engine POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:engine> $<TARGET_FILE_DIR:engine>
+    COMMAND_EXPAND_LISTS
+    )
+endif()
+
+add_executable(game initial.cpp)
+
+if(WIN32)
+  set_target_properties(game PROPERTIES LINK_FLAGS "/SUBSYSTEM:CONSOLE")
+endif()
+
+set_property(TARGET game PROPERTY CXX_STANDARD 20)
+target_compile_definitions(game PUBLIC GLM_FORCE_DEPTH_ZERO_TO_ONE)
+target_include_directories(game PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+
+target_link_libraries(game PUBLIC vma glm Vulkan::Vulkan fmt::fmt stb_image SDL2::SDL2 vkbootstrap imgui fastgltf::fastgltf)
+
+target_precompile_headers(game PUBLIC <optional> <vector> <memory> <string> <vector> <unordered_map> <glm/mat4x4.hpp>  <glm/vec4.hpp> <vulkan/vulkan.h>)
+
+if(WIN32)
+  add_custom_command(TARGET game POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:game> $<TARGET_FILE_DIR:game>
     COMMAND_EXPAND_LISTS
     )
 endif()
